# sceneflow

./: .gitignore  CLAUDE.md  Makefile  README.md  implementation_plan.md  package-lock.json  package.json  pdr.md
.claude/skills/git-commit/: SKILL.md
.cline/skills/git-commit/: SKILL.md
app/: .pylintrc  pyproject.toml  ruff.toml
app/core/: database.py  media_engine.py  telemetry.py
app/src/app/: main.py
app/src/app/core/: database.py  exporter.py  media_engine.py  query_parser.py  telemetry.py
app/tests/: test_smoke.py
electron/: main.js  preload.js
frontend/: app.js  index.html  styles.css
memory-bank/: activeContext.md  productContext.md  progress.md  projectbrief.md  systemPatterns.md  techContext.md
scripts/: setup_env.sh
