[project]
name = "app"
version = "0.1.0"
requires-python = ">=3.13"
dependencies = [
    "fastapi>=0.138.0",
    "ffmpeg-python>=0.2.0",
    "pylint>=3.2",
    "python-multipart>=0.0.32",
    "ruff>=0.9",
    "sqlalchemy>=2.0.51",
    "uvicorn[standard]>=0.49.0",
]

[build-system]
requires = ["uv_build>=0.9.7,<0.10.0"]
build-backend = "uv_build"
